added profile pic and links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,15 @@ header h1 {
     font-size: 48px;
 }
 
+.hero {
+    height: 400px;
+    width: 30%; 
+    margin-bottom: 25px;
+    background-image: url("../images/WendyPic.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
 aside {
     background-color: aqua;
     float: left;
@@ -39,4 +48,16 @@ main {
     display: inline;
     border: 1px solid black;
     width: 100%;
+}
+
+
+.footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+.footer h2 {
+    font-size: 20px;
 }
