--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,8 @@ header h1 {
 }
 
 aside {
-    background-color: grey;
     float: left;
-    margin: 25px;
+    margin: 10px;
     }
 
 section {
@@ -46,18 +45,33 @@ section {
 
 main {
     display: inline;
-    border: 1px solid black;
+    border: 1px;
     width: 100%;
 }
 
-.float-right {
-    float: right;
-    margin-left: 25px;
-    height: 400px;
-    width: 30%;
+p {
+    font-size: 16px;
+    margin-inline: 10%;
 }
 
+.run-buddy {
+    float: right;
+    margin-left: 25px;
+    height: 200px;
+    width: 20%;
+}
 
+.refactor {
+    float: right;
+    margin-left: 25px;
+    height: 200px;
+    width: 20%;
+}
+
+.refactor :hover {
+    background-color: blue;
+    flex-grow: 20%;
+}
 
 
 .footer {
